Less ugly top alignment This prevents one card from sticking up to the top, now they stick out at the bottom

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
   border-radius: 2px;
   background: #eee;
   color: #111;
+  vertical-align: top;
 }
 
 .description {
